--- a/src/client/styles/header.scss
+++ b/src/client/styles/header.scss
@@ -1,5 +1,6 @@
-header {
+.page__header {
     display: flex;
     justify-content: space-between;
-    padding: 10px 40px;
+    padding: 1em;
+    font-size: 3em;
 }
