--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -1,37 +1,30 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" dir="ltr">
     <head>
-        <meta charset="utf-8">
-        <title>Test</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Travel Planner</title>
     </head>
-
     <body>
-
-        <header>
-            <div class="">
-                Logo
-            </div>
-            <div class="">
-                navigation
-            </div>
+        <!-- Page header -->
+        <header class="page__header">
+            <h1>Travel Planner</h1>
         </header>
-
+        <!-- Page main section -->
         <main>
+            <div class="menu__bar">
+                <button class="menu__button" type="button">add trip</button>
+            </div>
             <section>
-                <form class="" onsubmit="return Client.handleSubmit(event)">
-                    <input id="name" type="text" name="input" value="" placeholder="Name">
-                    <input type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
-                </form>
-            </section>
-
-            <section>
-                <strong>Form Results:</strong>
-                <div id="results"></div>
+                <div class="content__img box">
+                    <!-- <img src="../media/confused_dog.jpg" alt="Vacation City"> -->
+                </div>
+                <div class="content__trip box">b</div>
             </section>
         </main>
-
-        <footer>
-            <p>This is a footer</p>
+        <!-- Page footer -->
+        <footer class="page__footer">
+            <p>FEND Capstone - Travel App</p>
         </footer>
 
     </body>
