GeoNames API working

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -16,10 +16,15 @@
                 <button class="menu__button" type="button">add trip</button>
             </div>
             <section>
-                <div class="content__img box">
+                <div class="box" id="trip__img">
                     <!-- <img src="../media/confused_dog.jpg" alt="Vacation City"> -->
                 </div>
-                <div class="content__trip box">b</div>
+                <div class="box" id="trip__info">
+                    <form class="" onsubmit="return Client.addTrip(event)">
+                        <!-- <input id="name" type="text" name="input" value="" placeholder="Name"> -->
+                        <input type="submit" name="" value="submit" onclick="return Client.addTrip(event)" onsubmit="return Client.addTrip(event)">
+                    </form>                        
+                </div>
             </section>
         </main>
         <!-- Page footer -->
