--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -21,7 +21,9 @@
                 </div>
                 <div class="box" id="trip__info">
                     <form class="" onsubmit="return Client.addTrip(event)">
-                        <!-- <input id="name" type="text" name="input" value="" placeholder="Name"> -->
+                        <input id="trip_dest" type="text" name="trip_place" value="" placeholder="Trip Destination (e.g. Orlando)">
+                        <input id="trip_start" type="date" name="trip_start">
+                        <input id="trip_end" type="date" name="trip_end">
                         <input type="submit" name="" value="submit" onclick="return Client.addTrip(event)" onsubmit="return Client.addTrip(event)">
                     </form>                        
                 </div>
