added all API calls, some HTML/CSS

--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -9,6 +9,11 @@ body {
     display: flex;
     border: 1px solid red;
     align-items: center;
-    justify-content: center;
+    // justify-content: center;
     // align-content: center;
+}
+
+#place__holder {
+    background-color: #fff7f3;
+    min-height:15vh;
 }
