--- a/src/client/styles/form.scss
+++ b/src/client/styles/form.scss
@@ -1,7 +1,34 @@
 form {
+    display: flex;
+    // grid-template-columns: 1fr 1fr;
+    // grid-template-rows: 1fr 1fr 1fr 1fr;
+    // column-gap: 10px;
+    flex-direction: column;
     border: 1px solid #545454;
     border-radius: 3px;
     padding: 40px;
+
+    .trip_info_entry {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        column-gap: 1em;    
+    }
+
+    label {
+        width: 60%;
+        text-align: left;
+    }
+
+    h2 {
+        display: block;
+        font-size: 1.5em;
+        // margin-top: 0.83em;
+        margin-bottom: 0.83em;
+        margin-left: 0;
+        margin-right: 0;
+        font-weight: bold;
+    }
 }
 
 input {
@@ -10,3 +37,11 @@ input {
     line-height: 16px;
     margin: 10px 0;
 }
+
+
+// display: grid;
+// height: 75vh;
+// padding: 1em;
+// grid-template-columns: 1fr 1fr;
+// grid-template-rows: 1fr;
+// column-gap: 10px;
