--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -8,28 +8,25 @@ main {
 
     section {
         display: grid;
-        height: 75vh;
+        height: 65vh;
         padding: 1em;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr;
-        column-gap: 1px;
+        column-gap: 10px;
 
-        .content__img {
+        #trip__img {
             display: flex;
             height: 100%;
             width: 100%;
             margin-right: auto;
             justify-content: center;
+            align-items: start;
 
             img {
                 max-height: 100%;
                 max-width: 100%;
                 object-fit: cover;
             }
-        }
-
-        .content__trip {
-
         }
     }
 }
