formatted the page

--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -5,15 +5,15 @@ body {
     background-color: #fff7f3;
 }
 
-.box {
-    display: flex;
-    border: 1px solid red;
-    align-items: center;
-    // justify-content: center;
-    // align-content: center;
-}
+// .box {
+//     display: flex;
+//     border: 1px solid red;
+//     align-items: center;
+//     justify-content: center;
+//     align-content: center;
+// }
 
-#place__holder {
-    background-color: #fff7f3;
-    min-height:15vh;
-}
+// #place__holder {
+//     background-color: #fff7f3;
+//     min-height:15vh;
+// }
