--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -7,14 +7,21 @@ main {
     }
 
     section {
+        
         display: grid;
-        height: 65vh;
+        height: 75vh;
         padding: 1em;
+        margin: auto;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr;
+        grid-template-rows: 450px minmax(100px, 300px);
+        grid-template-areas: 
+        "dest_img trip_info"
+        "weather weather";
         column-gap: 10px;
+        row-gap: 10px;
 
         #trip__img {
+            grid-area: dest_img;
             display: flex;
             height: 100%;
             width: 100%;
@@ -22,11 +29,77 @@ main {
             justify-content: center;
             align-items: start;
 
-            img {
-                max-height: 100%;
-                max-width: 100%;
-                object-fit: cover;
+        }
+
+        #trip__info {
+            grid-area: trip_info;
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            width: 100%;
+            margin: auto;
+        }
+
+        #trip__weather {
+            grid-area: weather;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            // width: auto;
+            // margin: auto;
+
+            h2 {
+                text-align: center;
+                margin-top: 0.83em;
             }
         }
+
+        #trip_weather_entries {
+            display: flex;
+            flex-direction: row;
+            row-gap: 5px;
+            height: 100%;
+            width: 100%;
+            margin: auto;
+            // margin-right: auto;
+            justify-content: center;
+            align-items: center;
+
+            .trip_weather_entry {
+                display: flex;
+                // height: 50%;
+                // margin: auto;
+                flex-direction: column;
+                text-align: center;
+                justify-content: center;
+            }
+
+            .trip_weather_entry_date {
+                color: gray;
+                font-size: large;
+                font-weight: bold;
+            }
+
+            .trip_weather_entry_temp {
+                color: gray;
+                font-size: medium;
+            }
+        }
+
+        img {
+            max-height: 100%;
+            max-width: 100%;
+            object-fit: cover;
+        }
+    }
+
+    h2 {
+        display: block;
+        font-size: 1.5em;
+        // margin-top: 0.83em;
+        margin-bottom: 0.83em;
+        margin-left: 0;
+        margin-right: 0;
+        font-weight: bold;
     }
 }
