--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -1,22 +1,23 @@
 main {
+    display: flex;
+    flex-direction: column;
     flex: 2;
+    // min-height: 100vh;
     background-color: #fde0dd;
 
-    .menu__bar {
-        background-color: #fff7f3;
-    }
-
     section {
-        
         display: grid;
-        height: 75vh;
+        height: auto;
+        // height: 75vh;
         padding: 1em;
         margin: auto;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 450px minmax(100px, 300px);
+        grid-template-columns: 1fr;
+        // grid-auto-rows: minmax(100px, 400px);
+        grid-template-rows: auto auto auto;
         grid-template-areas: 
-        "dest_img trip_info"
-        "weather weather";
+        "dest_img"
+        "trip_info"
+        "weather";
         column-gap: 10px;
         row-gap: 10px;
 
@@ -38,6 +39,8 @@ main {
             height: 100%;
             width: 100%;
             margin: auto;
+            border-bottom: thin solid darkgray;
+
         }
 
         #trip__weather {
@@ -56,10 +59,10 @@ main {
 
         #trip_weather_entries {
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
             row-gap: 5px;
-            height: 100%;
-            width: 100%;
+            height: auto;
+            width: auto;
             margin: auto;
             // margin-right: auto;
             justify-content: center;
@@ -72,24 +75,9 @@ main {
                 flex-direction: column;
                 text-align: center;
                 justify-content: center;
+                border-bottom: thin solid darkgray;
+                margin-bottom: 0.83em;
             }
-
-            .trip_weather_entry_date {
-                color: gray;
-                font-size: large;
-                font-weight: bold;
-            }
-
-            .trip_weather_entry_temp {
-                color: gray;
-                font-size: medium;
-            }
-        }
-
-        img {
-            max-height: 100%;
-            max-width: 100%;
-            object-fit: cover;
         }
     }
 
@@ -102,4 +90,122 @@ main {
         margin-right: 0;
         font-weight: bold;
     }
+
+    .trip_weather_entry_date {
+        color: gray;
+        font-size: large;
+        font-weight: bold;
+    }
+
+    .trip_weather_entry_temp {
+        color: gray;
+        font-size: medium;
+    }
+
+    img {
+        max-height: 100%;
+        max-width: 100%;
+        object-fit: cover;
+    }
+
+}
+
+@media (min-width: 475px) and (max-width: 900px) {
+
+    main {
+
+        section {
+            display: grid;
+            height: auto;
+            // height: 75vh;
+            padding: 1em;
+            margin: auto;
+            grid-template-columns: 1fr;
+            // grid-auto-rows: minmax(100px, 400px);
+            grid-template-rows: auto auto auto;
+            grid-template-areas: 
+            "dest_img"
+            "trip_info"
+            "weather";
+            column-gap: 10px;
+            row-gap: 10px;
+        }
+    }
+}
+
+@media (min-width: 901px) {
+    main {
+    
+        section {
+            display: grid;
+            height: 75vh;
+            padding: 1em;
+            margin: auto;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 450px minmax(100px, 300px);
+            grid-template-areas: 
+            "dest_img trip_info"
+            "weather weather";
+            column-gap: 10px;
+            row-gap: 10px;
+    
+            #trip__img {
+                grid-area: dest_img;
+                display: flex;
+                height: 100%;
+                width: 100%;
+                margin-right: auto;
+                justify-content: center;
+                align-items: start;
+    
+            }
+    
+            #trip__info {
+                grid-area: trip_info;
+                display: flex;
+                flex-direction: column;
+                height: 100%;
+                width: 100%;
+                margin: auto;
+                border: none;
+            }
+    
+            #trip__weather {
+                grid-area: weather;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                // width: auto;
+                // margin: auto;
+    
+                h2 {
+                    text-align: center;
+                    margin-top: 0.83em;
+                }
+            }
+    
+            #trip_weather_entries {
+                display: flex;
+                flex-direction: row;
+                row-gap: 5px;
+                height: auto;
+                width: auto;
+                margin: auto;
+                // margin-right: auto;
+                justify-content: center;
+                align-items: center;
+    
+                .trip_weather_entry {
+                    display: flex;
+                    // height: 50%;
+                    // margin: auto;
+                    flex-direction: column;
+                    text-align: center;
+                    justify-content: center;
+                    border-bottom: none;
+                    margin-bottom: auto;
+                }
+            }
+        }
+    }        
 }
