--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -33,7 +33,7 @@
                         </div>
                         <input type="submit" name="" value="submit trip info" onclick="return Client.addTrip(event)" onsubmit="return Client.addTrip(event)">
                     </form>
-                    <h2>Trip Summary</h2>
+                    <div id="trip__summary"></div>
                 </div>
                 <div id="trip__weather">
                     <h2>Weather Information</h2>
