everything is working

--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -5,10 +5,10 @@ body {
     background-color: #fff7f3;
 }
 
-.box {
-    display: flex;
-    border: 1px solid red;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
-}
+// .box {
+//     display: flex;
+//     border: 1px solid red;
+//     align-items: center;
+//     justify-content: center;
+//     align-content: center;
+// }
